--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         "fb_url":"facebook.com/blog",
         "blog_name":"Shoaib blog",
         "gmail_username":"shoaibkhan6993@gmail.com",
-        "gmail_password":"shoaibabduljabbar2612",
+        "gmail_password":"adfdfd",
         "adminusername":"admin",
         "adminpassword":"admin",
         "session_key":"key",
