--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
         "blog_name":"Shoaib blog",
         "gmail_username":"shoaibkhan6993@gmail.com",
         "gmail_password":"adfdfd",
-        "adminusername":"admin",
-        "adminpassword":"admin",
+        "adminusername":"sdad",
+        "adminpassword":"sdfsf",
         "session_key":"key",
         "upload_location":"D:\\New folder"
     }
